--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+
 /* You can add global styles to this file, and also import other style files */
+html, body {
+	padding: 0;
+	margin: 0;
+  height: 100%;
+  font-family: Roboto, 'Open Sans';
+}
