feat: add completed and favorite

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <section>
-  <header>
+  <header class="header">
     <h1>{{ title }}</h1>
   </header>
   <app-list></app-list>
+  <footer class="footer">
+    <span>Angular 10 Todolist</span>
+  </footer>
 </section>
