--- a/src/app/todo/list/list.component.html
+++ b/src/app/todo/list/list.component.html
@@ -1,21 +1,27 @@
 <section>
-  <input placeholder="What to do next?" (keyup.enter)="addTodo($event)">
-  <h2 *ngIf="favoritesCount$ | async">Favorites - {{ favoritesCount$ | async }}</h2>
+  <form [formGroup]="addTodoGroup" (ngSubmit)="addTodo()">
+    <input placeholder="What to do next?" formControlName="todoInput" />
+    <button class="button" type="submit">Add Todo</button>
+  </form>
+  <h2 *ngIf="favoritesCount$ | async as favCount">
+    Favorites - {{ favCount }}
+  </h2>
   <ng-container *ngFor="let item of favorites$ | async">
-    <app-list-item [item]="item" (deleteRequest)="deleteItem($event)" (favoriteRequest)="favoriteItem($event)" (toggleCompleteRequest)="toggleComplete($event)">
+    <app-list-item [@flyInOut]="'in'" [item]="item" (deleteRequest)="deleteItem($event)" (favoriteRequest)="favoriteItem($event)" (toggleCompleteRequest)="toggleComplete($event)">
     </app-list-item>
   </ng-container>
-  <h2 *ngIf="uncompletedCount$ | async">Todo - {{ uncompletedCount$ | async }} left</h2>
+  <h2 *ngIf="uncompletedCount$ | async as unCompCount">
+    Todo - {{ unCompCount }}
+  </h2>
   <ng-container *ngFor="let item of items$ | async">
-    <app-list-item [item]="item" (deleteRequest)="deleteItem($event)" (favoriteRequest)="favoriteItem($event)" (toggleCompleteRequest)="toggleComplete($event)">
+    <app-list-item [@flyInOut]="'in'" [item]="item" (deleteRequest)="deleteItem($event)" (favoriteRequest)="favoriteItem($event)" (toggleCompleteRequest)="toggleComplete($event)">
     </app-list-item>
   </ng-container>
-  <h2 *ngIf="completedCount$ | async">Completed - {{ completedCount$ | async }}</h2>
+  <h2 *ngIf="completedCount$ | async as compCount">
+    Completed - {{ compCount }}
+  </h2>
   <ng-container *ngFor="let item of completes$ | async">
-    <app-list-item [item]="item" (deleteRequest)="deleteItem($event)" (favoriteRequest)="favoriteItem($event)" (toggleCompleteRequest)="toggleComplete($event)">
+    <app-list-item [@flyInOut]="'in'" [item]="item" (deleteRequest)="deleteItem($event)" (favoriteRequest)="favoriteItem($event)" (toggleCompleteRequest)="toggleComplete($event)">
     </app-list-item>
   </ng-container>
 </section>
-<footer class="footer">
-  <span>Angular 10 Todolist experiment</span>
-</footer>
