--- a/src/app/todo/list/list.component.scss
+++ b/src/app/todo/list/list.component.scss
@@ -1,6 +1,8 @@
-// :host {
-//   height: 100%;
-//   display: flex;
-//   flex-direction: column;
-// }
+input {
+  margin: 0 8px;
+  padding: 5px;
+}
 
+button {
+  padding: 5px 10px;
+}
